--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
     "firebase": "^11.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
     "react-tooltip": "^5.28.0",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.14.5"
+    "sweetalert2": "^11.14.5",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
